--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Play Maker</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Play Maker Repo</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <script src="js/scripts.js"></script>
+    <p>This is a paragraph</p>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
