stylesheet path issue resolved

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>The Waiting Place...</h1> 
+    <h1 class="intros">The Waiting Place...</h1> 
     <p>...for people just waiting.
         Waiting for a train to go
         or a bus to come, or a plane to go
