--- a/index.html
+++ b/index.html
@@ -9,38 +9,38 @@
 
 <body>
     <h1 class="intros">The Waiting Place...</h1>
-    <p>...for people just waiting.
-        Waiting for a train to go
-        or a bus to come, or a plane to go
-        or the mail to come, or the rain to go
-        or the phone to ring, or the snow to snow
-        or the waiting around for a Yes or No
-        or waiting for their hair to grow.
-        Everyone is just waiting.
+    <p>...for people just waiting.<br>
+        Waiting for a train to go<br>
+        or a bus to come, or a plane to go<br>
+        or the mail to come, or the rain to go<br>
+        or the phone to ring, or the snow to snow<br>
+        or the waiting around for a Yes or No<br>
+        or waiting for their hair to grow.<br>
+        Everyone is just waiting.<br></p>
 
-        Waiting for the fish to bite
-        or waiting for the wind to fly a kite
-        or waiting around for Friday night
-        or waiting, perhaps, for their Uncle Jake
-        or a pot to boil, or a Better Break
-        or a string of pearls, or a pair of pants
-        or a wig with curls, or Another Chance.
-        Everyone is just waiting.
+       <p>Waiting for the fish to bite<br>
+        or waiting for the wind to fly a kite<br>
+        or waiting around for Friday night<br>
+        or waiting, perhaps, for their Uncle Jake<br>
+        or a pot to boil, or a Better Break<br>
+        or a string of pearls, or a pair of pants<br>
+        or a wig with curls, or Another Chance.<br>
+        Everyone is just waiting.</p>
 
-        NO!
-        That's not for you!
+       <p>NO!<br>
+        That's not for you!</p>
 
-        Somehow you'll escape
-        all that waiting and staying
-        You'll find the bright places
-        where Boom Bands are playing.
+        <p>Somehow you'll escape<br>
+        all that waiting and staying<br>
+        You'll find the bright places<br>
+        where Boom Bands are playing.<br></p>
 
-        With banner flip-flapping,
-        once more you'll ride high!
-        Ready for anything under the sky.
-        Ready because you're that kind of a guy!
+        <p>With banner flip-flapping,<br>
+        once more you'll ride high!<br>
+        Ready for anything under the sky.<br>
+        Ready because you're that kind of a guy!<br></p>
 
-        Oh, the places you'll go! There is fun to be done!</p>
+        <p>Oh, the places you'll go! There is fun to be done!</p>
 
     <a href="https://daringtolivefully.com/waiting-place" target="_blank"><img src="assets/transparent_waiting_sign.png"
             alt="Custom Dr. Seuss Sign" /></a>
