--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         or waiting for their hair to grow.<br>
         Everyone is just waiting.<br></p>
 
-       <p>Waiting for the fish to bite<br>
+    <p>Waiting for the fish to bite<br>
         or waiting for the wind to fly a kite<br>
         or waiting around for Friday night<br>
         or waiting, perhaps, for their Uncle Jake<br>
@@ -27,23 +27,28 @@
         or a wig with curls, or Another Chance.<br>
         Everyone is just waiting.</p>
 
-       <p>NO!<br>
+    <p>NO!<br>
         That's not for you!</p>
 
-        <p>Somehow you'll escape<br>
+    <p>Somehow you'll escape<br>
         all that waiting and staying<br>
         You'll find the bright places<br>
         where Boom Bands are playing.<br></p>
 
-        <p>With banner flip-flapping,<br>
+    <p>With banner flip-flapping,<br>
         once more you'll ride high!<br>
         Ready for anything under the sky.<br>
         Ready because you're that kind of a guy!<br></p>
 
-        <p>Oh, the places you'll go! There is fun to be done!</p>
+    <p>Oh, the places you'll go! There is fun to be done!</p>
 
     <a href="https://daringtolivefully.com/waiting-place" target="_blank"><img src="assets/transparent_waiting_sign.png"
             alt="Custom Dr. Seuss Sign" /></a>
+
+    <div class="footer">
+        <p>Oh The Places You'll Go</p>
+        <h2>KID, YOU'LL MOVE MOUNTAINS<h2>
+    </div>
 
     <script src="js/script.js"></script>
 </body>
